code inspections, fix issue when notes present but no departures from a location - still check for notes based on locaiton not due trams